# contextcli

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
src/ctxcli/: __init__.py  cli.py  extractor.py  generator.py  hooks.py  scanner.py
tests/: test_bug_fixes.py  test_cli.py  test_extractor.py  test_generator.py  test_hooks.py  test_integration.py  test_robustness.py  test_scanner.py
