[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ctxcli"
version = "0.1.0"
description = "Auto-generate CLAUDE.md from your codebase. Persistent memory for Claude Code."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["claude", "claude-code", "CLAUDE.md", "AI", "developer-tools", "memory"]
authors = [
    { name = "Gaurav Chhabra", email = "gauravchhabra705@users.noreply.github.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.9,<0.10",
    "click>=8.0,<8.2",
    "rich>=13",
]

[project.urls]
Homepage = "https://github.com/gauravchhabra705/contextcli"
Source = "https://github.com/gauravchhabra705/contextcli"
"Bug Tracker" = "https://github.com/gauravchhabra705/contextcli/issues"

[project.scripts]
ctx = "ctxcli.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/ctxcli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
